src/app/pages/user/user-pg/user-pg.component.css
.user-info {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    flex-direction: column;
    background-color: #e3d3d3

}

form {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 300px;
    border: 2px solid #b6acac;
    border-radius: 15px;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #fff

}

